--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="some_div">
+        Ну я написал текст, надеюсь работает.
+    </div>
+</body>
+</html>
